# noax

./: README.md  pyproject.toml
src/layers/: spectral_conv.py
src/noax/layers/: channel_mixing.py  fourier_layer.py  spectral_conv.py
src/noax/layers/tests/: test_spectral_conv.py
src/noax/models/: fno.py
tests/layers/: test_channel_mixing.py  test_fourier_layer.py  test_spectral_conv.py
tests/models/: test_fno.py
